--- a/11F/index.html
+++ b/11F/index.html
@@ -23,21 +23,21 @@
 <header id="header" ><div id="headerContent">Mujeres en la informática</div></header>
 <nav id="siteNav">
 <ul>
-   <li id="active"><a href="index.html" class="active daddy main-node"></a></li>
-   <li><a href="__.html" class="no-ch"></a></li>
-   <li><a href="__0.html" class="no-ch"></a></li>
-   <li><a href="__1.html" class="no-ch"></a></li>
-   <li><a href="__2.html" class="no-ch"></a></li>
+   <li id="active"><a href="index.html" class="active daddy main-node">11F</a></li>
+   <li><a href="objetivo.html" class="no-ch">Objetivo</a></li>
+   <li><a href="11_de_febrero.html" class="no-ch">11 de febrero</a></li>
+   <li><a href="lnea_de_tiempo.html" class="no-ch">Línea de tiempo</a></li>
+   <li><a href="preguntas.html" class="no-ch">Preguntas</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="__.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="objetivo.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle"></h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">11F</h1></header>
 <article class="iDevice_wrapper textIdevice em_iDevice" id="id5">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle"> Día Internacional de la Mujer y la Niña en la Ciencia. </h1></header>
@@ -59,7 +59,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="__.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="objetivo.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
