--- a/11F/preguntas.html
+++ b/11F/preguntas.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title> | Mujeres en la informática </title>
+<title>Preguntas | Mujeres en la informática </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="GmedranoTIC" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -22,21 +22,21 @@
 <header id="header" ><div id="headerContent">Mujeres en la informática</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node"></a></li>
-   <li><a href="__.html" class="no-ch"></a></li>
-   <li><a href="__0.html" class="no-ch"></a></li>
-   <li><a href="__1.html" class="no-ch"></a></li>
-   <li id="active"><a href="__2.html" class="active no-ch"></a></li>
+   <li><a href="index.html" class="daddy main-node">11F</a></li>
+   <li><a href="objetivo.html" class="no-ch">Objetivo</a></li>
+   <li><a href="11_de_febrero.html" class="no-ch">11 de febrero</a></li>
+   <li><a href="lnea_de_tiempo.html" class="no-ch">Línea de tiempo</a></li>
+   <li id="active"><a href="preguntas.html" class="active no-ch">Preguntas</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="__1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="lnea_de_tiempo.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle"></h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">Preguntas</h1></header>
 <article class="iDevice_wrapper MultichoiceIdevice em_iDevice em_iDevice_question" id="id10">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header"><h1 class="iDeviceTitle">Preguntas sobre mujeres de la informática</h1></header>
@@ -369,7 +369,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="__1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="lnea_de_tiempo.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 </div>
