--- a/Scratch_GmedranoTIC/palabras_por_slaba_fuerte.html
+++ b/Scratch_GmedranoTIC/palabras_por_slaba_fuerte.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Palabras por sílaba fuerte | Matemáticas </title>
+<title>Palabras por sílaba fuerte |  Recursos digitales para primaria </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="GmedranoTIC" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,14 +19,24 @@
 <body class="exe-web-site" id="exe-node-9"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Matemáticas</div></header>
+<header id="header" ><div id="headerContent"> Recursos digitales para primaria</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Inicio</a></li>
+   <li><a href="index.html" class="daddy main-node">Recursos digitales para primaria</a></li>
    <li><a href="introduccin.html" class="no-ch">Introducción</a></li>
    <li><a href="matemticas.html" class="daddy">Matemáticas</a>
    <ul class="other-section">
       <li><a href="bingo_para_tres_cifras.html" class="no-ch">Bingo para tres cifras</a></li>
+      <li><a href="recurso_suma_con_llevadas.html" class="no-ch">Recurso suma con llevadas</a></li>
+      <li><a href="presentacin_y_ejercicios_sobre_monedas.html" class="no-ch">Presentación y ejercicios sobre monedas</a></li>
+      <li><a href="medir.html" class="no-ch">Medir</a></li>
+      <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
+      <li><a href="juegos_de_operaciones.html" class="daddy">Juegos de operaciones</a>
+      <ul class="other-section">
+         <li><a href="juego_de_sumas.html" class="no-ch">Juego de Sumas</a></li>
+         <li><a href="juego_de_multiplicaciones.html" class="no-ch">Juego de multiplicaciones</a></li>
+      </ul>
+      </li>
    </ul>
    </li>
    <li><a href="al.html" class="daddy">AL</a>
@@ -35,16 +45,34 @@
       <li><a href="pincha_palabras_que_se_dicen_aleatorio_e_infinito.html" class="no-ch">Pincha palabras que se dicen (aleatorio e infinito)</a></li>
    </ul>
    </li>
+   <li><a href="conocimiento.html" class="daddy">Conocimiento</a>
+   <ul class="other-section">
+      <li><a href="quin_es_quin.html" class="daddy">Quién es quién</a>
+      <ul class="other-section">
+         <li><a href="quin_es_quin__formas_y_colores.html" class="no-ch">Quién es quién - Formas y colores</a></li>
+         <li><a href="quin_es_quin__animales.html" class="no-ch">Quién es quién - Animales</a></li>
+         <li><a href="quin_es_quin__personas.html" class="no-ch">Quién es quién - Personas</a></li>
+         <li><a href="quin_es_quin__cuerpo_humano.html" class="no-ch">Quién es quién - Cuerpo humano</a></li>
+      </ul>
+      </li>
+   </ul>
+   </li>
    <li class="current-page-parent"><a href="lengua.html" class="current-page-parent daddy">Lengua</a>
    <ul>
       <li id="active"><a href="palabras_por_slaba_fuerte.html" class="active no-ch">Palabras por sílaba fuerte</a></li>
+   </ul>
+   </li>
+   <li><a href="juegos_lgica.html" class="daddy">Juegos lógica</a>
+   <ul class="other-section">
+      <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
+      <li><a href="juego_de_fichas_1.html" class="no-ch">Juego de fichas (1)</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="lengua.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="lengua.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="juegos_lgica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -69,8 +97,8 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="lengua.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="lengua.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="juegos_lgica.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
-<p id="made-with-eXe"><a href="https://exelearning.net/" target="_blank" rel="noopener"><span>Creado con eXeLearning<span> (Ventana nueva)</span></span></a></p><script type="text/javascript" src="_intef_js.js"></script></body></html>
+<script type="text/javascript" src="_simplepoint_js.js"></script></body></html>
