--- a/Scratch_GmedranoTIC/juego_de_fichas_1.html
+++ b/Scratch_GmedranoTIC/juego_de_fichas_1.html
@@ -47,6 +47,8 @@
    </li>
    <li><a href="conocimiento.html" class="daddy">Conocimiento</a>
    <ul class="other-section">
+      <li><a href="creador_de_bocatas.html" class="no-ch">Creador_de_bocatas</a></li>
+      <li><a href="clasificador_de_alimentos.html" class="no-ch">Clasificador de Alimentos</a></li>
       <li><a href="quin_es_quin.html" class="daddy">Quién es quién</a>
       <ul class="other-section">
          <li><a href="quin_es_quin__formas_y_colores.html" class="no-ch">Quién es quién - Formas y colores</a></li>
@@ -66,13 +68,14 @@
    <ul>
       <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
       <li id="active"><a href="juego_de_fichas_1.html" class="active no-ch">Juego de fichas (1)</a></li>
+      <li><a href="tangram.html" class="no-ch">Tangram</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="tangram.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -97,7 +100,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="tangram.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
