--- a/Scratch_GmedranoTIC/juegos_lgica.html
+++ b/Scratch_GmedranoTIC/juegos_lgica.html
@@ -47,6 +47,8 @@
    </li>
    <li><a href="conocimiento.html" class="daddy">Conocimiento</a>
    <ul class="other-section">
+      <li><a href="creador_de_bocatas.html" class="no-ch">Creador_de_bocatas</a></li>
+      <li><a href="clasificador_de_alimentos.html" class="no-ch">Clasificador de Alimentos</a></li>
       <li><a href="quin_es_quin.html" class="daddy">Quién es quién</a>
       <ul class="other-section">
          <li><a href="quin_es_quin__formas_y_colores.html" class="no-ch">Quién es quién - Formas y colores</a></li>
@@ -66,6 +68,7 @@
    <ul>
       <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
       <li><a href="juego_de_fichas_1.html" class="no-ch">Juego de fichas (1)</a></li>
+      <li><a href="tangram.html" class="no-ch">Tangram</a></li>
    </ul>
    </li>
 </ul>
