--- a/Scratch_GmedranoTIC/conocimiento.html
+++ b/Scratch_GmedranoTIC/conocimiento.html
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body class="exe-web-site" id="exe-node-19"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-28"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent"> Recursos digitales para primaria</div></header>
@@ -47,6 +47,8 @@
    </li>
    <li id="active"><a href="conocimiento.html" class="active daddy">Conocimiento</a>
    <ul>
+      <li><a href="creador_de_bocatas.html" class="no-ch">Creador_de_bocatas</a></li>
+      <li><a href="clasificador_de_alimentos.html" class="no-ch">Clasificador de Alimentos</a></li>
       <li><a href="quin_es_quin.html" class="daddy">Quién es quién</a>
       <ul class="other-section">
          <li><a href="quin_es_quin__formas_y_colores.html" class="no-ch">Quién es quién - Formas y colores</a></li>
@@ -66,13 +68,14 @@
    <ul class="other-section">
       <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
       <li><a href="juego_de_fichas_1.html" class="no-ch">Juego de fichas (1)</a></li>
+      <li><a href="tangram.html" class="no-ch">Tangram</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="pincha_palabras_que_se_dicen_aleatorio_e_infinito.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="quin_es_quin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="pincha_palabras_que_se_dicen_aleatorio_e_infinito.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="creador_de_bocatas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -85,7 +88,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="pincha_palabras_que_se_dicen_aleatorio_e_infinito.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="quin_es_quin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="pincha_palabras_que_se_dicen_aleatorio_e_infinito.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="creador_de_bocatas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
