--- a/Scratch_GmedranoTIC/quin_es_quin__formas_y_colores.html
+++ b/Scratch_GmedranoTIC/quin_es_quin__formas_y_colores.html
@@ -47,6 +47,8 @@
    </li>
    <li class="current-page-parent"><a href="conocimiento.html" class="current-page-parent daddy">Conocimiento</a>
    <ul>
+      <li><a href="creador_de_bocatas.html" class="no-ch">Creador_de_bocatas</a></li>
+      <li><a href="clasificador_de_alimentos.html" class="no-ch">Clasificador de Alimentos</a></li>
       <li class="current-page-parent"><a href="quin_es_quin.html" class="current-page-parent daddy">Quién es quién</a>
       <ul>
          <li id="active"><a href="quin_es_quin__formas_y_colores.html" class="active no-ch">Quién es quién - Formas y colores</a></li>
@@ -66,6 +68,7 @@
    <ul class="other-section">
       <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
       <li><a href="juego_de_fichas_1.html" class="no-ch">Juego de fichas (1)</a></li>
+      <li><a href="tangram.html" class="no-ch">Tangram</a></li>
    </ul>
    </li>
 </ul>
