--- a/Scratch_GmedranoTIC/tangram.html
+++ b/Scratch_GmedranoTIC/tangram.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Medir |  Recursos digitales para primaria </title>
+<title>Tangram |  Recursos digitales para primaria </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="GmedranoTIC" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body class="exe-web-site" id="exe-node-21"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-26"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent"> Recursos digitales para primaria</div></header>
@@ -24,12 +24,12 @@
 <ul>
    <li><a href="index.html" class="daddy main-node">Recursos digitales para primaria</a></li>
    <li><a href="introduccin.html" class="no-ch">Introducción</a></li>
-   <li class="current-page-parent"><a href="matemticas.html" class="current-page-parent daddy">Matemáticas</a>
-   <ul>
+   <li><a href="matemticas.html" class="daddy">Matemáticas</a>
+   <ul class="other-section">
       <li><a href="bingo_para_tres_cifras.html" class="no-ch">Bingo para tres cifras</a></li>
       <li><a href="recurso_suma_con_llevadas.html" class="no-ch">Recurso suma con llevadas</a></li>
       <li><a href="presentacin_y_ejercicios_sobre_monedas.html" class="no-ch">Presentación y ejercicios sobre monedas</a></li>
-      <li id="active"><a href="medir.html" class="active no-ch">Medir</a></li>
+      <li><a href="medir.html" class="no-ch">Medir</a></li>
       <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
       <li><a href="juegos_de_operaciones.html" class="daddy">Juegos de operaciones</a>
       <ul class="other-section">
@@ -64,27 +64,32 @@
       <li><a href="palabras_por_slaba_fuerte.html" class="no-ch">Palabras por sílaba fuerte</a></li>
    </ul>
    </li>
-   <li><a href="juegos_lgica.html" class="daddy">Juegos lógica</a>
-   <ul class="other-section">
+   <li class="current-page-parent"><a href="juegos_lgica.html" class="current-page-parent daddy">Juegos lógica</a>
+   <ul>
       <li><a href="torres_de_hanoi_fichas_variables__gmedranotic.html" class="no-ch">Torres de Hanoi fichas variables - GmedranoTIC</a></li>
       <li><a href="juego_de_fichas_1.html" class="no-ch">Juego de fichas (1)</a></li>
-      <li><a href="tangram.html" class="no-ch">Tangram</a></li>
+      <li id="active"><a href="tangram.html" class="active no-ch">Tangram</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="presentacin_y_ejercicios_sobre_monedas.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="reloj_digital__analgico.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Medir</h1></header>
-<article class="iDevice_wrapper textIdevice" id="id16">
-<div class="iDevice emphasis0" >
-<div id="ta16_134_2" class="block iDevice_content">
-<div class="exe-text"><p><iframe width="485" height="402" src="https://scratch.mit.edu/projects/1084978877/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></iframe></p></div>
+<header id="nodeDecoration"><h1 id="nodeTitle">Tangram</h1></header>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id23">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Tangram</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta23_141_2" class="block iDevice_content">
+<div class="exe-text"><p><iframe width="485" height="402" src="https://scratch.mit.edu/projects/1090598006/embed" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"></iframe></p></div>
+</div>
+</div>
 </div>
 </div>
 </article>
@@ -95,7 +100,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="presentacin_y_ejercicios_sobre_monedas.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="reloj_digital__analgico.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 </div>
