--- a/Scratch_GmedranoTIC/presentacin_y_ejercicios_sobre_monedas.html
+++ b/Scratch_GmedranoTIC/presentacin_y_ejercicios_sobre_monedas.html
@@ -26,15 +26,15 @@
    <li><a href="pensamiento_computacional.html" class="no-ch">Pensamiento Computacional</a></li>
    <li class="current-page-parent"><a href="matemticas.html" class="current-page-parent daddy">Matemáticas</a>
    <ul>
-      <li><a href="juego_de_sumas.html" class="no-ch">Juego de Sumas</a></li>
+      <li><a href="juego_de_sumas_en_3_minutos.html" class="no-ch">Juego de sumas en 3 minutos</a></li>
       <li><a href="recurso_suma_con_llevadas.html" class="no-ch">Recurso suma con llevadas</a></li>
-      <li><a href="juego_de_multiplicaciones.html" class="no-ch">Juego de multiplicaciones</a></li>
+      <li><a href="juego_de_multiplicaciones_en_3_minutos.html" class="no-ch">Juego de multiplicaciones en 3 minutos</a></li>
       <li><a href="bingo_para_tres_cifras.html" class="no-ch">Bingo para tres cifras</a></li>
       <li id="active"><a href="presentacin_y_ejercicios_sobre_monedas.html" class="active no-ch">Presentación y ejercicios sobre monedas</a></li>
       <li><a href="medir.html" class="no-ch">Medir</a></li>
       <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
       <li><a href="adivina_la_contrasea.html" class="no-ch">Adivina la contraseña</a></li>
-      <li><a href="snake_matemtico.html" class="no-ch">Snake matemático</a></li>
+      <li><a href="serpiente_matemtica.html" class="no-ch">Serpiente matemática</a></li>
    </ul>
    </li>
    <li><a href="al.html" class="daddy">AL</a>
@@ -70,6 +70,7 @@
       <li><a href="tangram.html" class="no-ch">Tangram</a></li>
    </ul>
    </li>
+   <li><a href="ideas_makeymakey.html" class="no-ch">Ideas Makey-Makey</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
