--- a/Scratch_GmedranoTIC/tangram.html
+++ b/Scratch_GmedranoTIC/tangram.html
@@ -26,15 +26,15 @@
    <li><a href="pensamiento_computacional.html" class="no-ch">Pensamiento Computacional</a></li>
    <li><a href="matemticas.html" class="daddy">Matemáticas</a>
    <ul class="other-section">
-      <li><a href="juego_de_sumas.html" class="no-ch">Juego de Sumas</a></li>
+      <li><a href="juego_de_sumas_en_3_minutos.html" class="no-ch">Juego de sumas en 3 minutos</a></li>
       <li><a href="recurso_suma_con_llevadas.html" class="no-ch">Recurso suma con llevadas</a></li>
-      <li><a href="juego_de_multiplicaciones.html" class="no-ch">Juego de multiplicaciones</a></li>
+      <li><a href="juego_de_multiplicaciones_en_3_minutos.html" class="no-ch">Juego de multiplicaciones en 3 minutos</a></li>
       <li><a href="bingo_para_tres_cifras.html" class="no-ch">Bingo para tres cifras</a></li>
       <li><a href="presentacin_y_ejercicios_sobre_monedas.html" class="no-ch">Presentación y ejercicios sobre monedas</a></li>
       <li><a href="medir.html" class="no-ch">Medir</a></li>
       <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
       <li><a href="adivina_la_contrasea.html" class="no-ch">Adivina la contraseña</a></li>
-      <li><a href="snake_matemtico.html" class="no-ch">Snake matemático</a></li>
+      <li><a href="serpiente_matemtica.html" class="no-ch">Serpiente matemática</a></li>
    </ul>
    </li>
    <li><a href="al.html" class="daddy">AL</a>
@@ -70,11 +70,12 @@
       <li id="active"><a href="tangram.html" class="active no-ch">Tangram</a></li>
    </ul>
    </li>
+   <li><a href="ideas_makeymakey.html" class="no-ch">Ideas Makey-Makey</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="ideas_makeymakey.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -96,7 +97,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="juego_de_fichas_1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="ideas_makeymakey.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Creative Commons: Reconocimiento - no comercial - compartir igual 4.0 @GmedranoTIC 2025
