--- a/Scratch_GmedranoTIC/pensamiento_computacional.html
+++ b/Scratch_GmedranoTIC/pensamiento_computacional.html
@@ -26,6 +26,19 @@
    <li><a href="index.html" class="daddy main-node">Ideas de recursos en SCRATCH para primaria</a></li>
    <li><a href="ndice.html" class="no-ch">Índice</a></li>
    <li id="active"><a href="pensamiento_computacional.html" class="active no-ch">Pensamiento Computacional</a></li>
+   <li><a href="recursos_profesor.html" class="daddy">Recursos profesor</a>
+   <ul class="other-section">
+      <li><a href="crea_tu_cuenta_en_scratch.html" class="no-ch">Crea tu cuenta en Scratch</a></li>
+      <li><a href="convierte_tu_cuenta_a_profesor.html" class="no-ch">Convierte tu cuenta a profesor</a></li>
+      <li><a href="introduccin_a_scratch__posibilidades_y_demo.html" class="no-ch">Introducción a Scratch - Posibilidades y demo</a></li>
+   </ul>
+   </li>
+   <li><a href="recursos_alumnos.html" class="daddy">Recursos alumnos</a>
+   <ul class="other-section">
+      <li><a href="crea_tu_cuenta_en_scratch0.html" class="no-ch">Crea tu cuenta en Scratch</a></li>
+      <li><a href="introduccin_a_scratch__posibilidades_y_demo0.html" class="no-ch">Introducción a Scratch - Posibilidades y demo</a></li>
+   </ul>
+   </li>
    <li><a href="matemticas.html" class="daddy">Matemáticas</a>
    <ul class="other-section">
       <li><a href="juego_de_sumas_en_3_minutos.html" class="no-ch">Juego de sumas en 3 minutos</a></li>
@@ -48,7 +61,6 @@
    <li><a href="conocimiento.html" class="daddy">Conocimiento</a>
    <ul class="other-section">
       <li><a href="creador_de_bocatas.html" class="no-ch">Creador de bocatas</a></li>
-      <li><a href="ejemplo_de_presentacin.html" class="no-ch">Ejemplo de presentación</a></li>
       <li><a href="clasificador_de_alimentos.html" class="no-ch">Clasificador de Alimentos</a></li>
       <li><a href="quin_es_quin.html" class="daddy">Quién es quién</a>
       <ul class="other-section">
@@ -58,6 +70,8 @@
          <li><a href="quin_es_quin__cuerpo_humano.html" class="no-ch">Quién es quién - Cuerpo humano</a></li>
       </ul>
       </li>
+      <li><a href="alumno__ejemplo_de_presentacin.html" class="no-ch">Alumno - Ejemplo de presentación</a></li>
+      <li><a href="alumno__plantilla_preguntas.html" class="no-ch">Alumno - Plantilla preguntas</a></li>
    </ul>
    </li>
    <li><a href="lengua.html" class="daddy">Lengua</a>
@@ -77,7 +91,7 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="ndice.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="matemticas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="ndice.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="recursos_profesor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -114,7 +128,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="ndice.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="matemticas.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="ndice.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="recursos_profesor.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Creative Commons: Reconocimiento - no comercial - compartir igual 4.0 @GmedranoTIC 2025
