--- a/Scratch_GmedranoTIC/ideas_makeymakey.html
+++ b/Scratch_GmedranoTIC/ideas_makeymakey.html
@@ -40,6 +40,7 @@
       <li><a href="alumno__plantilla_preguntas.html" class="no-ch">Alumno - Plantilla preguntas</a></li>
       <li><a href="alumno__ejemplo_de_presentacin.html" class="no-ch">Alumno - Ejemplo de presentación</a></li>
       <li><a href="alumno__lnea_de_tiempo.html" class="no-ch">Alumno - Línea de tiempo</a></li>
+      <li><a href="alumno__mquina_del_tiempo.html" class="no-ch">Alumno - Máquina del tiempo</a></li>
    </ul>
    </li>
    <li><a href="matemticas.html" class="daddy">Matemáticas</a>
@@ -51,6 +52,7 @@
       <li><a href="presentacin_y_ejercicios_sobre_monedas.html" class="no-ch">Presentación y ejercicios sobre monedas</a></li>
       <li><a href="medir.html" class="no-ch">Medir</a></li>
       <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
+      <li><a href="par_o_impar.html" class="no-ch">Par o Impar</a></li>
       <li><a href="adivina_la_contrasea.html" class="no-ch">Adivina la contraseña</a></li>
       <li><a href="serpiente_matemtica.html" class="no-ch">Serpiente matemática</a></li>
       <li><a href="paradoja_cuadrado.html" class="no-ch">Paradoja cuadrado</a></li>
@@ -109,6 +111,27 @@
 <tr>
 <td style="width: 34.4273%;"><a href="https://youtube.com/shorts/pG0SMpJqSMA" target="_blank" rel="noopener">https://youtube.com/shorts/pG0SMpJqSMA</a></td>
 <td style="width: 31.8439%;"><a href="https://youtube.com/shorts/wiIHVOmYeWU" target="_blank" rel="noopener">https://youtube.com/shorts/wiIHVOmYeWU</a></td>
+<td style="width: 33.7288%;"><a href="https://youtube.com/shorts/kOUNsD_xTno" target="_blank" rel="noopener">https://youtube.com/shorts/kOUNsD_xTno</a></td>
+</tr>
+<tr>
+<td style="width: 34.4273%;">
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/FsuP43W5ynI" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+<td style="width: 31.8439%;">
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/wiIHVOmYeWU" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+<td style="width: 33.7288%;">
+<p><iframe width="314" height="560" src="https://youtube.com/embed/kOUNsD_xTno" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+</tr>
+</tbody>
+</table>
+<p></p>
+<table style="width: 100%;" border="0">
+<tbody>
+<tr>
+<td style="width: 34.4273%;"><a href="https://youtube.com/shorts/FsuP43W5ynI" target="_blank" rel="noopener">https://youtube.com/shorts/FsuP43W5ynI</a></td>
+<td style="width: 31.8439%;"><a href="https://youtube.com/shorts/7iacTkiaYV8" target="_blank" rel="noopener">https://youtube.com/shorts/7iacTkiaYV8</a></td>
 <td style="width: 33.7288%;"><a href="https://youtube.com/shorts/UdFoD722g5s" target="_blank" rel="noopener">https://youtube.com/shorts/UdFoD722g5s</a></td>
 </tr>
 <tr>
@@ -116,7 +139,7 @@
 <p><iframe width="314" height="560" src="https://www.youtube.com/embed/pG0SMpJqSMA" allowfullscreen="allowfullscreen"></iframe></p>
 </td>
 <td style="width: 31.8439%;">
-<p><iframe width="314" height="560" src="https://www.youtube.com/embed/wiIHVOmYeWU" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/7iacTkiaYV8" allowfullscreen="allowfullscreen"></iframe></p>
 </td>
 <td style="width: 33.7288%;">
 <p><iframe width="314" height="560" src="https://youtube.com/embed/UdFoD722g5s" allowfullscreen="allowfullscreen"></iframe></p>
@@ -124,7 +147,6 @@
 </tr>
 </tbody>
 </table>
-<p></p>
 <p>Puedes ver aquí mi repositorio con más posibilidades:</p>
 <p><a href="https://scratch.mit.edu/studios/34702313" target="_blank" rel="noopener">https://scratch.mit.edu/studios/34702313</a></p></div>
 </div>
