--- a/Scratch_GmedranoTIC/ideas_microbit.html
+++ b/Scratch_GmedranoTIC/ideas_microbit.html
@@ -40,6 +40,7 @@
       <li><a href="alumno__plantilla_preguntas.html" class="no-ch">Alumno - Plantilla preguntas</a></li>
       <li><a href="alumno__ejemplo_de_presentacin.html" class="no-ch">Alumno - Ejemplo de presentación</a></li>
       <li><a href="alumno__lnea_de_tiempo.html" class="no-ch">Alumno - Línea de tiempo</a></li>
+      <li><a href="alumno__mquina_del_tiempo.html" class="no-ch">Alumno - Máquina del tiempo</a></li>
    </ul>
    </li>
    <li><a href="matemticas.html" class="daddy">Matemáticas</a>
@@ -51,6 +52,7 @@
       <li><a href="presentacin_y_ejercicios_sobre_monedas.html" class="no-ch">Presentación y ejercicios sobre monedas</a></li>
       <li><a href="medir.html" class="no-ch">Medir</a></li>
       <li><a href="reloj_digital__analgico.html" class="no-ch">Reloj Digital - Analógico</a></li>
+      <li><a href="par_o_impar.html" class="no-ch">Par o Impar</a></li>
       <li><a href="adivina_la_contrasea.html" class="no-ch">Adivina la contraseña</a></li>
       <li><a href="serpiente_matemtica.html" class="no-ch">Serpiente matemática</a></li>
       <li><a href="paradoja_cuadrado.html" class="no-ch">Paradoja cuadrado</a></li>
@@ -107,19 +109,39 @@
 <table style="width: 100%;" border="0">
 <tbody>
 <tr>
-<td style="width: 34.4273%;"><a href="https://youtube.com/shorts/YFxsHrFyJcM" target="_blank" rel="noopener">https://youtube.com/shorts/pG0SMpJqSMA</a></td>
-<td style="width: 31.8439%;"><a href="https://youtube.com/shorts/lv5d2s3jmsM" target="_blank" rel="noopener">https://youtube.com/shorts/lv5d2s3jmsM</a></td>
+<td style="width: 34.4273%;"><a href="https://youtube.com/shorts/My3eGitqiYQ" target="_blank" rel="noopener">https://youtube.com/shorts/My3eGitqiYQ</a></td>
+<td style="width: 31.8439%;"><a href="https://youtube.com/shorts/RionLQdjkX8" target="_blank" rel="noopener">https://youtube.com/shorts/RionLQdjkX8</a></td>
 <td style="width: 33.7288%;"><a href="https://youtube.com/shorts/bowYlMaU7Rs" target="_blank" rel="noopener">https://youtube.com/shorts/UdFoD722g5s</a></td>
 </tr>
 <tr>
 <td style="width: 34.4273%;">
-<p><iframe width="314" height="560" src="https://www.youtube.com/embed/YFxsHrFyJcM" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/My3eGitqiYQ" allowfullscreen="allowfullscreen"></iframe></p>
 </td>
 <td style="width: 31.8439%;">
-<p><iframe width="314" height="560" src="https://www.youtube.com/embed/lv5d2s3jmsM" allowfullscreen="allowfullscreen"></iframe></p>
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/RionLQdjkX8" allowfullscreen="allowfullscreen"></iframe></p>
 </td>
 <td style="width: 33.7288%;">
 <p><iframe width="314" height="560" src="https://youtube.com/embed/bowYlMaU7Rs" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+</tr>
+</tbody>
+</table>
+<table style="width: 100%;" border="0">
+<tbody>
+<tr>
+<td style="width: 34.4273%;"><a href="https://youtube.com/shorts/lv5d2s3jmsM" target="_blank" rel="noopener">https://youtube.com/shorts/lv5d2s3jmsM</a></td>
+<td style="width: 31.8439%;"><a href="https://youtube.com/shorts/YFxsHrFyJcM" target="_blank" rel="noopener">https://youtube.com/shorts/YFxsHrFyJcM</a></td>
+<td style="width: 33.7288%;"><a href="https://youtube.com/shorts/42rP9S83jkw" target="_blank" rel="noopener">https://youtube.com/shorts/42rP9S83jkw</a></td>
+</tr>
+<tr>
+<td style="width: 34.4273%;">
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/lv5d2s3jmsM" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+<td style="width: 31.8439%;">
+<p><iframe width="314" height="560" src="https://www.youtube.com/embed/YFxsHrFyJcM" allowfullscreen="allowfullscreen"></iframe></p>
+</td>
+<td style="width: 33.7288%;">
+<p><iframe width="314" height="560" src="https://youtube.com/embed/42rP9S83jkw" allowfullscreen="allowfullscreen"></iframe></p>
 </td>
 </tr>
 </tbody>
